ensure no wrapping of title

--- a/polaris-react/src/components/Page/components/Header/Header.module.scss
+++ b/polaris-react/src/components/Page/components/Header/Header.module.scss
@@ -7,6 +7,7 @@ $action-menu-rollup-computed-width: 40px;
   margin-top: var(--p-space-100);
   align-self: center;
   flex: 1 1 auto;
+  min-width: fit-content;
 
   @media (--p-breakpoints-sm-up) {
     margin-top: 0;
